running code with updated account entity
