# src/main/resources/openapi/accounts/schemas.yml
@@ -51,12 +51,22 @@ components:
           description: "Prospect last updated time"
           readOnly: true
           example: "2022-04-13T01:52:40.690387Z"
+        providerType:
+          type: string
+          description: "Provider type"
+          example: "stripe"
+        providerId:
+          type: string
+          description: "Customer id generated by stripe"
+          example: "cus_PgOYf1odnchLfk"
       example:
         - id: usr_fba5b240-0e68-4e64-aca6-f12022dc4be3
           firstName: "John"
           lastName: "Doe"
           creationAt: "2022-04-13T01:52:40.690387Z"
           updatedAt: "2022-04-13T01:52:40.690387Z"
+          providerId: "cus_PgOYf1odnchLfk"
+          providerType: "stripe"
 
     accounts:
       type: array
